# Clueme

./: .gitignore  README.md  ai_processor.py  clueme.cmd  clueme.py  clueme_coding.py  coding_ai_processor.py  compile.md  main.py  ocr.py  oneocr_wrapper.py  openai_logs.txt  pyproject.toml  requirements.txt  setup.bat  stealth_assistant.py
.github/workflows/: release.yml
