[project]
name = "clueme"
version = "0.1.0"
description = "Invisible AI Assistant for MCQ answering and coding questions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "global-hotkeys>=0.1.7",
    "markdown-it-py>=3.0.0",
    "oneocr>=1.0.10",
    "openai>=1.76.0",
    "pillow>=11.3.0",
    "pygments>=2.17.0",
    "pyside6>=6.9.0",
    "python-dotenv>=1.1.0",
]
